--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                     class="form-label">Login</label>
                 <input type="text" id="login"
                     name="login"
-                    class="form-control" required />
+                    class="form-control menor" required />
                 
             </div>
             <div class="row">
